--- a/todo.txt
+++ b/todo.txt
@@ -1,10 +1,19 @@
+Something got slow?? groups?
+Secondary list what should display, navigation
+Common details on billboard
+gradient behind details
+gradient behind fullplayer
+trailer autoplay - light background
+secondary navigation
+home widgets autoplay
+
+
 Control.SetVisible() / Control.SetHidden() builtins
 skin timer autoplay trailer
 Skin timer for multiart
 
 UNSUPPORTED CONTROLS
 HiddenFocusButton
-Multiart_Setter
 Multiart_Resetter
 
 secondary-list
@@ -36,3 +45,34 @@ CHECK
 - Constants
 - one off animations
 - conditions for scripts e.g. autoplay, embuary helper, autocomplete
+
+
+<!-- Trailer Autoplay window
+<control type="videowindow">
+  <animation effect="slide" end="0,15" time="0" condition="$EXP[StripView_Display_IsFanart]">Conditional</animation>
+  <animation effect="zoom" end="90" center="auto" time="0" condition="$EXP[StripView_Display_IsFanart]">Conditional</animation>
+  <visible>$EXP[StripView_Display_IsFanart]</visible>
+</control>
+<control type="image">
+  <width>400</width>
+  <height>100%</height>
+  <texture colordiffuse="$VAR[Secondary_Color]">views/white_100.png</texture>
+</control>
+<control type="image">
+  <right>0</right>
+  <width>400</width>
+  <height>100%</height>
+  <texture colordiffuse="$VAR[Secondary_Color]">views/white_100.png</texture>
+</control>
+<control type="image">
+  <width>100%</width>
+  <height>240</height>
+  <texture colordiffuse="$VAR[Secondary_Color]">views/white_100.png</texture>
+</control>
+<control type="image">
+  <width>100%</width>
+  <height>210</height>
+  <bottom>0</bottom>
+  <texture colordiffuse="$VAR[Secondary_Color]">views/white_100.png</texture>
+</control>
+-->
