--- a/language/resource.language.en_gb/strings.po
+++ b/language/resource.language.en_gb/strings.po
@@ -468,6 +468,11 @@ msgctxt "#31525"
 msgid "Disabled"
 msgstr ""
 
+#: /16x9/Includes_MyViews.xml
+msgctxt "#31053"
+msgid "Trailers"
+msgstr ""
+
 
 
 
@@ -1054,9 +1059,7 @@ msgstr ""
 
 
 
-msgctxt "#31053"
-msgid "Hide submenu headings"
-msgstr ""
+
 
 msgctxt "#31054"
 msgid "Random movies"
