--- a/todo.txt
+++ b/todo.txt
@@ -1,7 +1,5 @@
-Something got slow?? groups?
-Secondary list what should display, navigation
+Cancel playback animation!!??
 Common details on billboard
-gradient behind details
 gradient behind fullplayer
 trailer autoplay - light background
 secondary navigation
