--- a/language/resource.language.en_gb/strings.po
+++ b/language/resource.language.en_gb/strings.po
@@ -738,6 +738,16 @@ msgctxt "#31052"
 msgid "Enable trailer autoplay"
 msgstr ""
 
+#: /16x9/SkinSettings.xml
+msgctxt "#31011"
+msgid "Home screen"
+msgstr ""
+
+#: /16x9/SkinSettings.xml
+msgctxt "#31012"
+msgid "Videos screen"
+msgstr ""
+
 
 
 
@@ -933,178 +943,4 @@ msgstr ""
 #/16x9/Widget_Variables.xml
 msgctxt "#31006"
 msgid "Similar albums"
-msgstr ""
-
-
-
-
-
-
-
-
-msgctxt "#31011"
-msgid "Close playlist"
-msgstr ""
-
-msgctxt "#31012"
-msgid "Current playlist"
-msgstr ""
-
-msgctxt "#31013"
-msgid "Muted"
-msgstr ""
-
-msgctxt "#31014"
-msgid "Show visualisation & Artist Slideshow"
-msgstr ""
-
-msgctxt "#31015"
-msgid "Live TV"
-msgstr ""
-
-msgctxt "#31017"
-msgid "Voted"
-msgstr ""
-
-msgctxt "#31018"
-msgid "Increase"
-msgstr ""
-
-msgctxt "#31019"
-msgid "Decrease"
-msgstr ""
-
-msgctxt "#31020"
-msgid "Background"
-msgstr ""
-
-msgctxt "#31021"
-msgid "Home"
-msgstr ""
-
-msgctxt "#31027"
-msgid "Show background video"
-msgstr ""
-
-msgctxt "#31028"
-msgid "Show background visualisation"
-msgstr ""
-
-msgctxt "#31030"
-msgid "Enable curves"
-msgstr ""
-
-msgctxt "#31031"
-msgid "Recent movies"
-msgstr ""
-
-msgctxt "#31032"
-msgid "Recommended movies"
-msgstr ""
-
-msgctxt "#31034"
-msgid "Enable Artist Slideshow"
-msgstr ""
-
-msgctxt "#31035"
-msgid "Recent episodes"
-msgstr ""
-
-msgctxt "#31036"
-msgid "Recommended episodes"
-msgstr ""
-
-msgctxt "#31038"
-msgid "Recent albums"
-msgstr ""
-
-msgctxt "#31039"
-msgid "Recommended albums"
-msgstr ""
-
-msgctxt "#31040"
-msgid "Hide Conq logo"
-msgstr ""
-
-msgctxt "#31041"
-msgid "Debug grid"
-msgstr ""
-
-msgctxt "#31042"
-msgid "Debug labels"
-msgstr ""
-
-msgctxt "#31043"
-msgid "Extra art"
-msgstr ""
-
-msgctxt "#31044"
-msgid "Local subtitle found!"
-msgstr ""
-
-msgctxt "#31046"
-msgid "Currently"
-msgstr ""
-
-msgctxt "#31047"
-msgid "Visualisation Presets"
-msgstr ""
-
-msgctxt "#31048"
-msgid "Playlist Options"
-msgstr ""
-
-
-
-
-
-
-
-
-msgctxt "#31054"
-msgid "Random movies"
-msgstr ""
-
-msgctxt "#31055"
-msgid "Random episodes"
-msgstr ""
-
-msgctxt "#31056"
-msgid "Random albums"
-msgstr ""
-
-msgctxt "#31057"
-msgid "Kiosk mode"
-msgstr ""
-
-msgctxt "#31058"
-msgid "Reset all Conq settings"
-msgstr ""
-
-msgctxt "#31059"
-msgid "Memory Used:"
-msgstr ""
-
-msgctxt "#31060"
-msgid "Enable Headings"
-msgstr ""
-
-msgctxt "#31061"
-msgid "Enable Horizontal home layout"
-msgstr ""
-
-msgctxt "#31063"
-msgid "Addons"
-msgstr ""
-
-msgctxt "#31064"
-msgid "Customise Colours"
-msgstr ""
-
-msgctxt "#31065"
-msgid "Hide 'Mouse' warning"
-msgstr ""
-
-msgctxt "#31066"
-msgid "Cinema Exp."
 msgstr ""
