--- a/language/resource.language.en_gb/strings.po
+++ b/language/resource.language.en_gb/strings.po
@@ -639,8 +639,33 @@ msgid "Set artwork brightness"
 msgstr ""
 
 #: /16x9/SkinSettings.xml
+msgctxt "#31248"
+msgid "50%"
+msgstr ""
+
+#: /16x9/SkinSettings.xml
+msgctxt "#31249"
+msgid "33% (default)"
+msgstr ""
+
+#: /16x9/SkinSettings.xml
+msgctxt "#31250"
+msgid "25%"
+msgstr ""
+
+#: /16x9/SkinSettings.xml
+msgctxt "#31017"
+msgid "Show clearlogos"
+msgstr ""
+
+#: /16x9/SkinSettings.xml
 msgctxt "#31244"
 msgid "Hide clock"
+msgstr ""
+
+#: /16x9/SkinSettings.xml
+msgctxt "#31015"
+msgid "Views"
 msgstr ""
 
 #: /16x9/SkinSettings.xml
@@ -674,21 +699,6 @@ msgid "Set refresh interval"
 msgstr ""
 
 #: /16x9/SkinSettings.xml
-msgctxt "#31248"
-msgid "50%"
-msgstr ""
-
-#: /16x9/SkinSettings.xml
-msgctxt "#31249"
-msgid "33% (default)"
-msgstr ""
-
-#: /16x9/SkinSettings.xml
-msgctxt "#31250"
-msgid "25%"
-msgstr ""
-
-#: /16x9/SkinSettings.xml
 msgctxt "#31253"
 msgid "3 seconds"
 msgstr ""
@@ -714,6 +724,26 @@ msgid "10 seconds"
 msgstr ""
 
 #: /16x9/SkinSettings.xml
+msgctxt "#31052"
+msgid "Enable trailer autoplay"
+msgstr ""
+
+#: /16x9/SkinSettings.xml
+msgctxt "#31011"
+msgid "Home screen"
+msgstr ""
+
+#: /16x9/SkinSettings.xml
+msgctxt "#31012"
+msgid "Videos screen"
+msgstr ""
+
+#: /16x9/SkinSettings.xml
+msgctxt "#31014"
+msgid "Enable global fanart slideshow for settings screens"
+msgstr ""
+
+#: /16x9/SkinSettings.xml
 msgctxt "#31241"
 msgid "Prefer keyart for poster views"
 msgstr ""
@@ -729,25 +759,19 @@ msgid "Display unwatched episodes info"
 msgstr ""
 
 #: /16x9/SkinSettings.xml
-msgctxt "#31242"
+msgctxt "#31018"
 msgid "Hide progress bar on pause screen"
 msgstr ""
 
 #: /16x9/SkinSettings.xml
-msgctxt "#31052"
-msgid "Enable trailer autoplay"
+msgctxt "#31242"
+msgid "Show info on pause screen"
 msgstr ""
 
 #: /16x9/SkinSettings.xml
-msgctxt "#31011"
-msgid "Home screen"
+msgctxt "#31013"
+msgid "Scroll by sort letter"
 msgstr ""
-
-#: /16x9/SkinSettings.xml
-msgctxt "#31012"
-msgid "Videos screen"
-msgstr ""
-
 
 
 
