--- a/language/resource.language.en_gb/strings.po
+++ b/language/resource.language.en_gb/strings.po
@@ -730,12 +730,17 @@ msgstr ""
 
 #: /16x9/SkinSettings.xml
 msgctxt "#31011"
-msgid "Home screen"
+msgid "Home"
 msgstr ""
 
 #: /16x9/SkinSettings.xml
 msgctxt "#31012"
-msgid "Videos screen"
+msgid "Videos / Movies"
+msgstr ""
+
+#: /16x9/SkinSettings.xml
+msgctxt "#31019"
+msgid "Videos / TV Shows"
 msgstr ""
 
 #: /16x9/SkinSettings.xml
