--- a/language/resource.language.en_gb/strings.po
+++ b/language/resource.language.en_gb/strings.po
@@ -695,47 +695,47 @@ msgstr ""
 
 #: /16x9/SkinSettings.xml
 msgctxt "#31024"
-msgid "BBFC / UK"
+msgid "BBFC (UK)"
 msgstr ""
 
 #: /16x9/SkinSettings.xml
 msgctxt "#31025"
-msgid "MPAA / US"
-msgstr ""
-
-#: /16x9/SkinSettings.xml
-msgctxt "#31026"
-msgid "CMPRS / Canadian"
-msgstr ""
-
-#: /16x9/SkinSettings.xml
-msgctxt "#31027"
-msgid "DJCTQ / Brazilian"
-msgstr ""
-
-#: /16x9/SkinSettings.xml
-msgctxt "#31028"
-msgid "EIRIN / Japanese"
-msgstr ""
-
-#: /16x9/SkinSettings.xml
-msgctxt "#31029"
-msgid "FSK / German"
-msgstr ""
-
-#: /16x9/SkinSettings.xml
-msgctxt "#31030"
-msgid "IFCO / Irish"
-msgstr ""
-
-#: /16x9/SkinSettings.xml
-msgctxt "#31031"
-msgid "NICAM / Dutch"
+msgid "MPAA / TV-PG (US / others)"
 msgstr ""
 
 #: /16x9/SkinSettings.xml
 msgctxt "#31032"
-msgid "OFLC / Australian"
+msgid "ACB (Australia)"
+msgstr ""
+
+#: /16x9/SkinSettings.xml
+msgctxt "#31026"
+msgid "CHVRS / CBSC (Canada)"
+msgstr ""
+
+#: /16x9/SkinSettings.xml
+msgctxt "#31027"
+msgid "DJCTQ (Brazil)"
+msgstr ""
+
+#: /16x9/SkinSettings.xml
+msgctxt "#31028"
+msgid "EIRIN (Japan)"
+msgstr ""
+
+#: /16x9/SkinSettings.xml
+msgctxt "#31029"
+msgid "FSK (Austria / Germany / Switzerland)"
+msgstr ""
+
+#: /16x9/SkinSettings.xml
+msgctxt "#31030"
+msgid "IFCO (Ireland)"
+msgstr ""
+
+#: /16x9/SkinSettings.xml
+msgctxt "#31031"
+msgid "KIJKWIJZER (Luxembourg / Netherlands)"
 msgstr ""
 
 #: /16x9/SkinSettings.xml
