--- a/todo.txt
+++ b/todo.txt
@@ -1,8 +1,5 @@
 NOW
-- CPMRS, EIRIN, DJCTQ, IFCO
-- stop flags disappearing when scrolling seasons/episodes/sets?
-- kenburns effect on home screen in options
-- ken burns on global artwork?
+- stop flags disappearing when scrolling seasons/episodes/sets?s
 - sort menu slow
 - create repo
 - create own addon or report playmedia bug
