--- a/language/resource.language.en_gb/strings.po
+++ b/language/resource.language.en_gb/strings.po
@@ -153,6 +153,12 @@ msgctxt "#31022"
 msgid "Title and Review"
 msgstr ""
 
+#: NEW 
+#/16x9/Content_Viewtype_Options_XX.xml
+msgctxt "#31031"
+msgid "Title and Description"
+msgstr ""
+
 #/16x9/Content_Viewtype_Options_XX.xml
 msgctxt "#31023"
 msgid "Clearlogos"
@@ -615,6 +621,24 @@ msgstr ""
 #/16x9/Content_Settings.xml
 msgctxt "#31422"
 msgid "Views"
+msgstr ""
+
+#: NEW   
+#/16x9/Content_Settings.xml
+msgctxt "#31455"
+msgid "Video and music windows"
+msgstr ""
+
+#: NEW   
+#/16x9/Content_Settings.xml
+msgctxt "#31456"
+msgid "Add-on and program windows"
+msgstr ""
+
+#: NEW   
+#/16x9/Content_Settings.xml
+msgctxt "#31457"
+msgid "Pictures window"
 msgstr ""
 
 #/16x9/Content_Settings.xml
