Alt ticks, accent color button, background art

--- a/language/resource.language.en_gb/strings.po
+++ b/language/resource.language.en_gb/strings.po
@@ -646,9 +646,33 @@ msgctxt "#31423"
 msgid "Dim thumbnails for watched listitems"
 msgstr ""
 
+#: NEW 
+#/16x9/Content_Settings.xml
+msgctxt "#31461"
+msgid "Checkmarks instead of progresss bar for watched items"
+msgstr ""
+
 #/16x9/Content_Settings.xml
 msgctxt "#31424"
 msgid "Global"
+msgstr ""
+
+#: NEW 
+#/16x9/Content_Settings.xml
+msgctxt "#31458"
+msgid "Accent colour"
+msgstr ""
+
+#: NEW 
+#/16x9/Content_Settings.xml
+msgctxt "#31459"
+msgid "Choose accent colour"
+msgstr ""
+
+#: NEW 
+#/16x9/Content_Settings.xml
+msgctxt "#31460"
+msgid "Reset accent colour to Copacetic default"
 msgstr ""
 
 #/16x9/Content_Settings.xml
