--- a/language/resource.language.en_gb/strings.po
+++ b/language/resource.language.en_gb/strings.po
@@ -451,6 +451,12 @@ msgctxt "#31219"
 msgid "Similar albums"
 msgstr ""
 
+#: NEW
+#/16x9/Variables_Labels_Widgets.xml
+msgctxt "#31221"
+msgid "Featuring"
+msgstr ""
+
 
 
 
