like song context menu and misc fixes

--- a/language/resource.language.en_gb/strings.po
+++ b/language/resource.language.en_gb/strings.po
@@ -101,6 +101,21 @@ msgstr ""
 
 
 
+#: T
+# NEW
+#/16x9/Templates_Dialogs.xml
+msgctxt "#31032"
+msgid "Like song"
+msgstr ""
+
+# NEW
+#/16x9/Templates_Dialogs.xml
+msgctxt "#31033"
+msgid "Unlike song"
+msgstr ""
+
+
+
 #: V
 
 #/16x9/Content_Viewtype_Options.xml
