misc fixes and improvements

--- a/language/resource.language.en_gb/strings.po
+++ b/language/resource.language.en_gb/strings.po
@@ -432,6 +432,13 @@ msgctxt "#31213"
 msgid "Similar artists"
 msgstr ""
 
+#: NEW
+#/16x9/Variables_Labels_Widgets.xml
+msgctxt "#31222"
+msgid "Similar songs"
+msgstr ""
+
+
 
 
 
