--- a/language/resource.language.en_gb/strings.po
+++ b/language/resource.language.en_gb/strings.po
@@ -103,15 +103,21 @@ msgstr ""
 
 #: T
 # NEW
-#/16x9/Templates_Dialogs.xml
+#/16x9/Templates_Dialogs.xml, /16x9/Notifications.xml
 msgctxt "#31032"
 msgid "Like song"
 msgstr ""
 
 # NEW
-#/16x9/Templates_Dialogs.xml
+#/16x9/Templates_Dialogs.xml, /16x9/Notifications.xml
 msgctxt "#31033"
 msgid "Unlike song"
+msgstr ""
+
+# NEW
+#/16x9/Templates_Dialogs.xml, /16x9/Content_Infoscreens.xml
+msgctxt "#31034"
+msgid "Create radio station"
 msgstr ""
 
 
