skin settings and addon settings

--- a/language/resource.language.en_gb/strings.po
+++ b/language/resource.language.en_gb/strings.po
@@ -400,7 +400,7 @@ msgctxt "#31208"
 msgid "Random albums"
 msgstr ""
 
-#/16x9/Components_Settings.xml
+#/16x9/Components_Settings.xml, 16x9/Content_Settings.xml
 #/16x9/Variables_Labels_Widgets.xml
 msgctxt "#31209"
 msgid "Custom"
@@ -589,17 +589,47 @@ msgstr ""
 
 #/16x9/Content_Settings.xml
 msgctxt "#31409"
-msgid "Override fanart slideshow"
+msgid "Override home menu backgrounds"
+msgstr ""
+
+#: NEW
+#/16x9/Content_Settings.xml
+msgctxt "#31464"
+msgid "Choose fanart for slideshow..."
+msgstr ""
+
+#: NEW
+#/16x9/Content_Settings.xml
+msgctxt "#31465"
+msgid "slideshow"
+msgstr ""
+
+#: NEW
+#/16x9/Content_Settings.xml
+msgctxt "#31466"
+msgid "Movies / TV shows / Artists"
+msgstr ""
+
+#: NEW
+#/16x9/Content_Settings.xml
+msgctxt "#31467"
+msgid "Movies / TV shows"
+msgstr ""
+
+#: NEW
+#/16x9/Content_Settings.xml
+msgctxt "#31468"
+msgid "Custom source"
 msgstr ""
 
 #/16x9/Content_Settings.xml
 msgctxt "#31410"
-msgid "Choose new path..."
+msgid "Choose path or playlist..."
 msgstr ""
 
 #/16x9/Content_Settings.xml
 msgctxt "#31411"
-msgid "Set artwork brightness"
+msgid "Set brightness"
 msgstr ""
 
 #/16x9/Content_Settings.xml
@@ -619,12 +649,12 @@ msgstr ""
 
 #/16x9/Content_Settings.xml
 msgctxt "#31415"
-msgid "Add movement to fanart slideshow"
+msgid "Add movement"
 msgstr ""
 
 #/16x9/Content_Settings.xml
 msgctxt "#31416"
-msgid "Enable fanart screensaver"
+msgid "Enable screensaver"
 msgstr ""
 
 #/16x9/Content_Settings.xml
@@ -683,7 +713,7 @@ msgstr ""
 #: NEW 
 #/16x9/Content_Settings.xml
 msgctxt "#31461"
-msgid "Checkmarks instead of progresss bar for watched items"
+msgid "Checkmarks instead of full progress bar for watched items"
 msgstr ""
 
 #/16x9/Content_Settings.xml
@@ -717,7 +747,7 @@ msgstr ""
 
 #/16x9/Content_Settings.xml
 msgctxt "#31425"
-msgid "Enable global fanart slideshow for settings screens"
+msgid "Enable background fanart slideshow"
 msgstr ""
 
 #/16x9/Content_Settings.xml
@@ -732,7 +762,7 @@ msgstr ""
 
 #/16x9/Content_Settings.xml
 msgctxt "#31428"
-msgid "Display unwatched episodes info"
+msgid "Use unwatched details in info lines"
 msgstr ""
 
 #/16x9/Content_Settings.xml
@@ -755,6 +785,12 @@ msgctxt "#31432"
 msgid "Extras"
 msgstr ""
 
+#: NEW
+#/16x9/Content_Settings.xml
+msgctxt "#31463"
+msgid "Experiments"
+msgstr ""
+
 #/16x9/Content_Settings.xml
 msgctxt "#31433"
 msgid "Enable embedded lists"
@@ -772,7 +808,7 @@ msgstr ""
 
 #/16x9/Content_Settings.xml
 msgctxt "#31436"
-msgid "Refresh interval"
+msgid "Refresh every"
 msgstr ""
 
 #/16x9/Content_Settings.xml
@@ -789,7 +825,7 @@ msgstr ""
 #/16x9/Content_Settings.xml
 #/16x9/Variables_Labels_Media.xml
 msgctxt "#31439"
-msgid "4 seconds (default)"
+msgid "4 seconds"
 msgstr ""
 
 #/16x9/Content_Settings.xml
