gridview_Fanart for pictures and misc fixes

--- a/language/resource.language.en_gb/strings.po
+++ b/language/resource.language.en_gb/strings.po
@@ -765,6 +765,12 @@ msgctxt "#31428"
 msgid "Use unwatched details in info lines"
 msgstr ""
 
+#: NEW
+#/16x9/Content_Settings.xml
+msgctxt "#31469"
+msgid "Enable fanart display for Grid view in Pictures window"
+msgstr ""
+
 #/16x9/Content_Settings.xml
 msgctxt "#31429"
 msgid "Hide progress bar on pause screen"
