clearlogo auto cropper

--- a/language/resource.language.en_gb/strings.po
+++ b/language/resource.language.en_gb/strings.po
@@ -552,6 +552,18 @@ msgctxt "#31401"
 msgid "Background"
 msgstr ""
 
+#: NEW
+#/16x9/Content_Settings.xml
+msgctxt "#31470"
+msgid "General"
+msgstr ""
+
+#: NEW
+#/16x9/Content_Settings.xml
+msgctxt "#31471"
+msgid "Theme"
+msgstr ""
+
 #/16x9/Content_Settings.xml
 msgctxt "#31402"
 msgid "Menus"
@@ -559,17 +571,17 @@ msgstr ""
 
 #/16x9/Content_Settings.xml
 msgctxt "#31403"
-msgid "Configure home menu"
+msgid "Home menu"
 msgstr ""
 
 #/16x9/Content_Settings.xml
 msgctxt "#31404"
-msgid "Configure shutdown menu"
+msgid "Shutdown menu"
 msgstr ""
 
 #/16x9/Content_Settings.xml
 msgctxt "#31405"
-msgid "Reset all menus"
+msgid "Reset menus"
 msgstr ""
 
 #/16x9/Content_Settings.xml
@@ -587,6 +599,12 @@ msgctxt "#31408"
 msgid "Are you sure you want to reset all home widgets back to default?"
 msgstr ""
 
+#: NEW
+#/16x9/Content_Settings.xml
+msgctxt "#31472"
+msgid "Backgrounds"
+msgstr ""
+
 #/16x9/Content_Settings.xml
 msgctxt "#31409"
 msgid "Override home menu backgrounds"
@@ -601,7 +619,7 @@ msgstr ""
 #: NEW
 #/16x9/Content_Settings.xml
 msgctxt "#31465"
-msgid "slideshow"
+msgid "Use slideshow"
 msgstr ""
 
 #: NEW
@@ -629,22 +647,7 @@ msgstr ""
 
 #/16x9/Content_Settings.xml
 msgctxt "#31411"
-msgid "Set brightness"
-msgstr ""
-
-#/16x9/Content_Settings.xml
-msgctxt "#31412"
-msgid "50%"
-msgstr ""
-
-#/16x9/Content_Settings.xml
-msgctxt "#31413"
-msgid "33% (default)"
-msgstr ""
-
-#/16x9/Content_Settings.xml
-msgctxt "#31414"
-msgid "25%"
+msgid "Set brightness (%)"
 msgstr ""
 
 #/16x9/Content_Settings.xml
@@ -718,7 +721,7 @@ msgstr ""
 
 #/16x9/Content_Settings.xml
 msgctxt "#31424"
-msgid "Global"
+msgid "Customisations"
 msgstr ""
 
 #: NEW
@@ -736,7 +739,7 @@ msgstr ""
 #: NEW
 #/16x9/Content_Settings.xml
 msgctxt "#31460"
-msgid "Reset accent colour to Copacetic default"
+msgid "Reset accent colour"
 msgstr ""
 
 #: NEW
@@ -747,7 +750,7 @@ msgstr ""
 
 #/16x9/Content_Settings.xml
 msgctxt "#31425"
-msgid "Enable background fanart slideshow"
+msgid "Enable fanart slideshows"
 msgstr ""
 
 #/16x9/Content_Settings.xml
@@ -762,18 +765,18 @@ msgstr ""
 
 #/16x9/Content_Settings.xml
 msgctxt "#31428"
-msgid "Use unwatched details in info lines"
+msgid "Use unwatched count in info details"
 msgstr ""
 
 #: NEW
 #/16x9/Content_Settings.xml
 msgctxt "#31469"
-msgid "Enable fanart display for Grid view in Pictures window"
+msgid "Enable fanart display for Grid view in pictures window"
 msgstr ""
 
 #/16x9/Content_Settings.xml
 msgctxt "#31429"
-msgid "Hide progress bar on pause screen"
+msgid "Instantly hide progress bar on pause screen"
 msgstr ""
 
 #/16x9/Content_Settings.xml
@@ -819,37 +822,7 @@ msgstr ""
 
 #/16x9/Content_Settings.xml
 msgctxt "#31437"
-msgid "Set refresh interval"
-msgstr ""
-
-#/16x9/Content_Settings.xml
-#/16x9/Variables_Labels_Media.xml
-msgctxt "#31438"
-msgid "3 seconds"
-msgstr ""
-
-#/16x9/Content_Settings.xml
-#/16x9/Variables_Labels_Media.xml
-msgctxt "#31439"
-msgid "4 seconds"
-msgstr ""
-
-#/16x9/Content_Settings.xml
-#/16x9/Variables_Labels_Media.xml
-msgctxt "#31440"
-msgid "5 seconds"
-msgstr ""
-
-#/16x9/Content_Settings.xml
-#/16x9/Variables_Labels_Media.xml
-msgctxt "#31441"
-msgid "7 seconds"
-msgstr ""
-
-#/16x9/Content_Settings.xml
-#/16x9/Variables_Labels_Media.xml
-msgctxt "#31442"
-msgid "10 seconds"
+msgid "Set refresh interval (seconds)"
 msgstr ""
 
 #/16x9/Content_Settings.xml
@@ -859,23 +832,23 @@ msgstr ""
 
 #/16x9/Content_Settings.xml
 msgctxt "#31444"
-msgid "Home screen"
+msgid "Play trailers for home widget movies and tv shows"
 msgstr ""
 
 #/16x9/Content_Settings.xml
 msgctxt "#31445"
-msgid "Videos screen / Movies"
+msgid "Play trailers for movies in video library"
 msgstr ""
 
 #/16x9/Content_Settings.xml
 msgctxt "#31446"
-msgid "Videos screen / TV shows"
+msgid "Play trailers for tv shows in video library"
 msgstr ""
 
 #: NEW 
 #/16x9/Content_Settings.xml
 msgctxt "#31453"
-msgid "Liked song rating threshold (1-10)"
+msgid "Liked song rating threshold"
 msgstr ""
 
 #: NEW 
