image coloriser for flags

--- a/language/resource.language.en_gb/strings.po
+++ b/language/resource.language.en_gb/strings.po
@@ -540,6 +540,12 @@ msgstr ""
 
 #: C
 
+#: NEW
+#/16x9/Content_Settings.xml
+msgctxt "#31470"
+msgid "General"
+msgstr ""
+
 #/16x9/Content_Settings.xml
 #/16x9/Content.xml
 msgctxt "#31400"
@@ -547,21 +553,69 @@ msgid "Home"
 msgstr ""
 
 #/16x9/Content_Settings.xml
-#/16x9/Content_Viewtype_Options_List.xml
-msgctxt "#31401"
-msgid "Background"
+msgctxt "#31419"
+msgid "Widgets"
+msgstr ""
+
+#/16x9/Content_Settings.xml
+msgctxt "#31424"
+msgid "Customisations"
+msgstr ""
+
+#/16x9/Content_Settings.xml
+msgctxt "#31432"
+msgid "Extras"
 msgstr ""
 
 #: NEW
 #/16x9/Content_Settings.xml
-msgctxt "#31470"
-msgid "General"
+msgctxt "#31463"
+msgid "Experiments"
+msgstr ""
+
+
+
+
+#: NEW
+#/16x9/Content_Settings.xml
+msgctxt "#31473"
+msgid "Recommended Kodi settings"
 msgstr ""
 
 #: NEW
 #/16x9/Content_Settings.xml
 msgctxt "#31471"
-msgid "Theme"
+msgid "Highlights the Kodi settings recommended to change for optimal Copacetic user experience. Toggle each proposed change on/off to your liking, then accept the changes you wish to keep."
+msgstr ""
+
+#: NEW
+#/16x9/Content_Settings.xml
+msgctxt "#31474"
+msgid "Select between light and dark themes. You can change themes on the fly from the power menu."
+msgstr ""
+
+#: NEW
+#/16x9/Content_Settings.xml
+msgctxt "#31458"
+msgid "Accent colour"
+msgstr ""
+
+#: NEW
+#/16x9/Content_Settings.xml
+msgctxt "#31475"
+msgid "Personalise Copacetic with your own accent colour. Where info is displayed on top of this colour, such as the episodes count icon in Grid view, Copacetic will automatically select between white and black text to maximise contrast."
+msgstr ""
+
+#: NEW
+#/16x9/Content_Settings.xml
+msgctxt "#31459"
+msgid "Choose accent colour"
+msgstr ""
+
+#: NEW
+#/16x9/Content_Settings.xml
+msgctxt "#31460"
+msgid "Reset accent colour"
 msgstr ""
 
 #/16x9/Content_Settings.xml
@@ -574,15 +628,81 @@ msgctxt "#31403"
 msgid "Home menu"
 msgstr ""
 
+#: NEW
+#/16x9/Content_Settings.xml
+msgctxt "#31476"
+msgid "Configure the home menu. For each shortcut, you can select an optional background to override the default slideshows."
+msgstr ""
+
 #/16x9/Content_Settings.xml
 msgctxt "#31404"
 msgid "Shutdown menu"
+msgstr ""
+
+#: NEW
+#/16x9/Content_Settings.xml
+msgctxt "#31477"
+msgid "Configure the shutdown menu. Context-dependent 'Home', 'Theme' and 'Settings' shortcuts cannot be removed. Additional shortcuts can be configured as you like."
 msgstr ""
 
 #/16x9/Content_Settings.xml
 msgctxt "#31405"
 msgid "Reset menus"
 msgstr ""
+
+#: NEW
+#/16x9/Content_Settings.xml
+msgctxt "#31478"
+msgid "Reset the home and shutdown menus back to Copacetic defaults. To reset an individual menu or shortcut, first navigate into the relevant menu and choose 'Restore' or 'Reset'."
+msgstr ""
+
+#: NEW
+#/16x9/Content_Settings.xml
+msgctxt "#31479"
+msgid "Run clearlogo cropping background service"
+msgstr ""
+
+#: NEW
+#/16x9/Content_Settings.xml
+msgctxt "#31480"
+msgid "Clearlogos cached in Kodi's texture library will be cropped as they are required. Cropped versions are saved to a separate cache. Once a cropped version is cached, performance impact should be minimal. No changes are made to the original artwork. This is process is run by Copacetic Helper as a background service. Disable to improve performance."
+msgstr ""
+
+#: NEW
+#/16x9/Content_Settings.xml
+msgctxt "#31481"
+msgid "Clear cache"
+msgstr ""
+
+#: NEW
+#/16x9/Content_Settings.xml
+msgctxt "#31482"
+msgid "This will delete the cropped clearlogo cache. To prevent the cache from being used, make sure to disable the background service above."
+msgstr ""
+
+#/16x9/Content_Settings.xml
+msgctxt "#31426"
+msgid "Prefer keyart for poster views"
+msgstr ""
+
+#: NEW
+#/16x9/Content_Settings.xml
+msgctxt "#31483"
+msgid "Keyart is a custom art type. To ensure it is fetched locally or remotely by scrapers, make sure 'keyart' is included in your art type whitelists for movies and / or tv shows. You can do this by choosing 'Recommended Kodi Settings' at the top of this menu, or by navigating to Settings > Media > Videos > Artwork. Alternatively, you can manually whitelist keyart by editing advancedsettings.xml."
+msgstr ""
+
+#/16x9/Content_Settings.xml
+msgctxt "#31425"
+msgid "Enable background fanart slideshows"
+msgstr ""
+
+#/16x9/Content_Settings.xml
+msgctxt "#31437"
+msgid "Set refresh interval (seconds)"
+msgstr ""
+
+
+
 
 #/16x9/Content_Settings.xml
 msgctxt "#31406"
@@ -671,11 +791,6 @@ msgid "Hide clock"
 msgstr ""
 
 #/16x9/Content_Settings.xml
-msgctxt "#31419"
-msgid "Widgets"
-msgstr ""
-
-#/16x9/Content_Settings.xml
 msgctxt "#31420"
 msgid "Widget"
 msgstr ""
@@ -719,44 +834,11 @@ msgctxt "#31461"
 msgid "Checkmarks instead of full progress bar for watched items"
 msgstr ""
 
-#/16x9/Content_Settings.xml
-msgctxt "#31424"
-msgid "Customisations"
-msgstr ""
 
-#: NEW
-#/16x9/Content_Settings.xml
-msgctxt "#31458"
-msgid "Accent colour"
-msgstr ""
 
-#: NEW
-#/16x9/Content_Settings.xml
-msgctxt "#31459"
-msgid "Choose accent colour"
-msgstr ""
 
-#: NEW
-#/16x9/Content_Settings.xml
-msgctxt "#31460"
-msgid "Reset accent colour"
-msgstr ""
 
-#: NEW
-#/16x9/Content_Settings.xml
-msgctxt "#31462"
-msgid "Dark text over accent colour"
-msgstr ""
 
-#/16x9/Content_Settings.xml
-msgctxt "#31425"
-msgid "Enable fanart slideshows"
-msgstr ""
-
-#/16x9/Content_Settings.xml
-msgctxt "#31426"
-msgid "Prefer keyart for poster views"
-msgstr ""
 
 #/16x9/Content_Settings.xml
 msgctxt "#31427"
@@ -789,16 +871,9 @@ msgctxt "#31431"
 msgid "Scroll by sort letter"
 msgstr ""
 
-#/16x9/Content_Settings.xml
-msgctxt "#31432"
-msgid "Extras"
-msgstr ""
 
-#: NEW
-#/16x9/Content_Settings.xml
-msgctxt "#31463"
-msgid "Experiments"
-msgstr ""
+
+
 
 #/16x9/Content_Settings.xml
 msgctxt "#31433"
@@ -818,11 +893,6 @@ msgstr ""
 #/16x9/Content_Settings.xml
 msgctxt "#31436"
 msgid "Refresh every"
-msgstr ""
-
-#/16x9/Content_Settings.xml
-msgctxt "#31437"
-msgid "Set refresh interval (seconds)"
 msgstr ""
 
 #/16x9/Content_Settings.xml
