colorise flags and set contrast threshold

--- a/language/resource.language.en_gb/strings.po
+++ b/language/resource.language.en_gb/strings.po
@@ -665,7 +665,7 @@ msgstr ""
 #: NEW
 #/16x9/Content_Settings.xml
 msgctxt "#31480"
-msgid "Clearlogos cached in Kodi's texture library will be cropped as they are required. Cropped versions are saved to a separate cache. Once a cropped version is cached, performance impact should be minimal. No changes are made to the original artwork. This is process is run by Copacetic Helper as a background service. Disable to improve performance."
+msgid "Clearlogos cached in Kodi's texture library will be cropped as they are required. Cropped versions are saved to a separate cache. Once a cropped version is cached, performance impact should be minimal. No changes are made to the original artwork. This is process is run by script.copacetic.helper as a background service. Disable to improve performance."
 msgstr ""
 
 #: NEW
@@ -678,6 +678,30 @@ msgstr ""
 #/16x9/Content_Settings.xml
 msgctxt "#31482"
 msgid "This will delete the cropped clearlogo cache. To prevent the cache from being used, make sure to disable the background service above."
+msgstr ""
+
+#: NEW
+#/16x9/Content_Settings.xml
+msgctxt "#31483"
+msgid "Colourise media flags"
+msgstr ""
+
+#: NEW
+#/16x9/Content_Settings.xml
+msgctxt "#31484"
+msgid "Media flags are colourised using the dominant colour from the processed clearlogo. Dominant colour will be used as long as it meets the required luminosity threshold: Above the minimum luminosity to be shown on dark backgrounds or below the maxium luminosity to be shown on light backgrounds. Adjust the thresholds below."
+msgstr ""
+
+#: NEW
+#/16x9/Content_Settings.xml
+msgctxt "#31485"
+msgid "Adjust colour contrast thresholds"
+msgstr ""
+
+#: NEW
+#/16x9/Content_Settings.xml
+msgctxt "#31486"
+msgid "Adjust the amount of contrast required between the background and the flag colour. Raising the bottom threshold means only lighter colours will be accepted on dark backgrounds. Lowering the top threshold means only darker colours can be used on light backgrounds. Avoids dark flags on dark backgrounds or light flags on light backgrounds. Default range: 65 - 650."
 msgstr ""
 
 #/16x9/Content_Settings.xml
