--- a/language/resource.language.en_gb/strings.po
+++ b/language/resource.language.en_gb/strings.po
@@ -584,6 +584,18 @@ msgstr ""
 
 #: NEW
 #/16x9/Content_Settings.xml
+msgctxt "#31487"
+msgid "Copacetic recommends changing the following Kodi settings for optimal user experience. Disable settings if you wish to keep their current value. Faded settings are disabled and show the current value."
+msgstr ""
+
+#: NEW
+#/16x9/Content_Settings.xml
+msgctxt "#31488"
+msgid "These will not be changed."
+msgstr ""
+
+#: NEW
+#/16x9/Content_Settings.xml
 msgctxt "#31471"
 msgid "Highlights the Kodi settings recommended to change for optimal Copacetic user experience. Toggle each proposed change on/off to your liking, then accept the changes you wish to keep."
 msgstr ""
@@ -1159,6 +1171,12 @@ msgstr ""
 #/16x9/Variables_Labels_Windows.xml
 msgctxt "#31529"
 msgid "Muted"
+msgstr ""
+
+#: NEW 
+#/16x9/Variables_Labels_Windows.xml
+msgctxt "#31533"
+msgid "On first entry"
 msgstr ""
 
 
