--- a/language/resource.language.en_gb/strings.po
+++ b/language/resource.language.en_gb/strings.po
@@ -701,7 +701,7 @@ msgstr ""
 #: NEW
 #/16x9/Content_Settings.xml
 msgctxt "#31484"
-msgid "Media flags are colourised using the dominant colour from the processed clearlogo. Dominant colour will be used as long as it meets the required luminosity threshold: Above the minimum luminosity to be shown on dark backgrounds or below the maxium luminosity to be shown on light backgrounds. Adjust the thresholds below."
+msgid "Media flags are colourised using the dominant colour from the processed clearlogo. The dominant colour will be used as long as it meets the required contrast with the background. You can adjust the contrast thresholds for dark and light backgrounds below."
 msgstr ""
 
 #: NEW
@@ -723,20 +723,30 @@ msgstr ""
 
 #: NEW
 #/16x9/Content_Settings.xml
-msgctxt "#31483"
+msgctxt "#31489"
 msgid "Keyart is a custom art type. To ensure it is fetched locally or remotely by scrapers, make sure 'keyart' is included in your art type whitelists for movies and / or tv shows. You can do this by choosing 'Recommended Kodi Settings' at the top of this menu, or by navigating to Settings > Media > Videos > Artwork. Alternatively, you can manually whitelist keyart by editing advancedsettings.xml."
 msgstr ""
 
 #/16x9/Content_Settings.xml
 msgctxt "#31425"
-msgid "Enable background fanart slideshows"
+msgid "Enable background slideshows"
+msgstr ""
+
+#: NEW
+#/16x9/Content_Settings.xml
+msgctxt "#31490"
+msgid "Fanarts are fetched from your library as a background service by script.copacetic.helper and displayed as a slideshow. The service only runs when the slideshow is visible. Disable to improve performance."
 msgstr ""
 
 #/16x9/Content_Settings.xml
 msgctxt "#31437"
-msgid "Set refresh interval (seconds)"
+msgid "Slideshow speed (seconds)"
 msgstr ""
 
+#/16x9/Content_Settings.xml
+msgctxt "#31491"
+msgid "Adjust the slider to change how long each fanart is displayed in the background slideshow."
+msgstr ""
 
 
 
@@ -775,7 +785,7 @@ msgstr ""
 #: NEW
 #/16x9/Content_Settings.xml
 msgctxt "#31465"
-msgid "Use slideshow"
+msgid "Use background slideshow"
 msgstr ""
 
 #: NEW
