--- a/language/resource.language.en_gb/strings.po
+++ b/language/resource.language.en_gb/strings.po
@@ -25,6 +25,7 @@ msgstr ""
 #: WINDOWS/DIALOGS    315XX
 #: MPAA MESSAGES      316XX
 #: WELCOME MESSAGES   317XX
+#: FONTS              319XX
 
 
 #: NEW                New additions
@@ -1312,56 +1313,81 @@ msgid "Who's watching?"
 
 #/16x9/Variables_Labels_Windows.xml
 msgctxt "#31701"
-msgid "Good evening!"
+msgid "Good evening"
 
 #/16x9/Variables_Labels_Windows.xml
 msgctxt "#31702"
-msgid "Good afternoon!"
+msgid "Good afternoon"
 
 #/16x9/Variables_Labels_Windows.xml
 msgctxt "#31703"
-msgid "Good morning!"
+msgid "Good morning"
 
 #/16x9/Variables_Labels_Windows.xml
 msgctxt "#31704"
-msgid "Happy New Year!"
+msgid "Happy New Year"
 
 #/16x9/Variables_Labels_Windows.xml
 msgctxt "#31705"
-msgid "Happy National Popcorn Day!"
+msgid "Happy National Popcorn Day"
 
 #/16x9/Variables_Labels_Windows.xml
 msgctxt "#31706"
-msgid "Happy Global Movie Day!"
+msgid "Happy Global Movie Day"
 
 #/16x9/Variables_Labels_Windows.xml
 msgctxt "#31707"
-msgid "Happy Baftas Day!"
+msgid "Happy Baftas Day"
 
 #/16x9/Variables_Labels_Windows.xml
 msgctxt "#31708"
-msgid "Happy International Women's Day!"
+msgid "Happy International Women's Day"
 
 #/16x9/Variables_Labels_Windows.xml
 msgctxt "#31709"
-msgid "Happy Razzies Day!"
+msgid "Happy Razzies Day"
 
 #/16x9/Variables_Labels_Windows.xml
 msgctxt "#31710"
-msgid "Happy Oscars Day!"
+msgid "Happy Oscars Day"
 
 #/16x9/Variables_Labels_Windows.xml
 msgctxt "#31711"
-msgid "Happy Xmas!"
+msgid "Happy Xmas"
 
 #/16x9/Variables_Labels_Windows.xml
 msgctxt "#31712"
-msgid "Ramadan Mubarak!"
+msgid "Ramadan Mubarak"
 
 #/16x9/Variables_Labels_Windows.xml
 msgctxt "#31713"
-msgid "Eid Mubarak!"
+msgid "Eid Mubarak"
 
 #/16x9/Variables_Labels_Windows.xml
 msgctxt "#31714"
-msgid "Happy Earth Day!"
+msgid "Happy Earth Day"
+
+
+
+
+#########################################################################################################
+
+#: FONTS     319XX
+
+#########################################################################################################
+
+#/16x9/Fonts.xml
+msgctxt "#31900"
+msgid "Inter"
+
+#/16x9/Fonts.xml
+msgctxt "#31901"
+msgid "Noto Sans Simplified Chinese"
+
+#/16x9/Fonts.xml
+msgctxt "#31902"
+msgid "Noto Sans Japanese"
+
+#/16x9/Fonts.xml
+msgctxt "#31903"
+msgid "Noto Sans Korean"
