--- a/language/resource.language.en_gb/strings.po
+++ b/language/resource.language.en_gb/strings.po
@@ -554,6 +554,12 @@ msgid "Home"
 msgstr ""
 
 #/16x9/Content_Settings.xml
+#/16x9/Content.xml
+msgctxt "#31401"
+msgid "Background"
+msgstr ""
+
+#/16x9/Content_Settings.xml
 msgctxt "#31419"
 msgid "Widgets"
 msgstr ""
@@ -579,32 +585,8 @@ msgstr ""
 
 #: NEW
 #/16x9/Content_Settings.xml
-msgctxt "#31473"
-msgid "Recommended Kodi settings"
-msgstr ""
-
-#: NEW
-#/16x9/Content_Settings.xml
-msgctxt "#31487"
-msgid "Copacetic recommends changing the following Kodi settings for optimal user experience. Disable settings if you wish to keep their current value. Faded settings are disabled and show the current value."
-msgstr ""
-
-#: NEW
-#/16x9/Content_Settings.xml
-msgctxt "#31488"
-msgid "These will not be changed."
-msgstr ""
-
-#: NEW
-#/16x9/Content_Settings.xml
-msgctxt "#31471"
-msgid "Highlights the Kodi settings recommended to change for optimal Copacetic user experience. Toggle each proposed change on/off to your liking, then accept the changes you wish to keep."
-msgstr ""
-
-#: NEW
-#/16x9/Content_Settings.xml
 msgctxt "#31474"
-msgid "Select between light and dark themes. You can change themes on the fly from the power menu."
+msgid "Choose from the 'Night' and 'Light' themes. Switch between them on the fly via the shutdown menu."
 msgstr ""
 
 #: NEW
@@ -629,6 +611,30 @@ msgstr ""
 #/16x9/Content_Settings.xml
 msgctxt "#31460"
 msgid "Reset accent colour"
+msgstr ""
+
+#: NEW
+#/16x9/Content_Settings.xml
+msgctxt "#31473"
+msgid "Recommended Kodi settings"
+msgstr ""
+
+#: NEW
+#/16x9/Content_Settings.xml
+msgctxt "#31487"
+msgid "Copacetic recommends changing the following Kodi settings for optimal user experience. Disable settings if you wish to keep their current value. Faded settings are disabled and show the current value."
+msgstr ""
+
+#: NEW
+#/16x9/Content_Settings.xml
+msgctxt "#31488"
+msgid "These will not be changed."
+msgstr ""
+
+#: NEW
+#/16x9/Content_Settings.xml
+msgctxt "#31471"
+msgid "Highlights the Kodi settings recommended to change for optimal Copacetic user experience. Toggle each proposed change on/off to your liking, then accept the changes you wish to keep."
 msgstr ""
 
 #/16x9/Content_Settings.xml
@@ -660,13 +666,7 @@ msgstr ""
 
 #/16x9/Content_Settings.xml
 msgctxt "#31405"
-msgid "Reset menus"
-msgstr ""
-
-#: NEW
-#/16x9/Content_Settings.xml
-msgctxt "#31478"
-msgid "Reset the home and shutdown menus back to Copacetic defaults. To reset an individual menu or shortcut, first navigate into the relevant menu and choose 'Restore' or 'Reset'."
+msgid "Reset all menus"
 msgstr ""
 
 #: NEW
@@ -718,17 +718,6 @@ msgid "Adjust the amount of contrast required between the background and the fla
 msgstr ""
 
 #/16x9/Content_Settings.xml
-msgctxt "#31426"
-msgid "Prefer keyart for poster views"
-msgstr ""
-
-#: NEW
-#/16x9/Content_Settings.xml
-msgctxt "#31489"
-msgid "Keyart is a custom art type. To ensure it is fetched locally or remotely by scrapers, make sure 'keyart' is included in your art type whitelists for movies and / or tv shows. You can do this by choosing 'Recommended Kodi Settings' at the top of this menu, or by navigating to Settings > Media > Videos > Artwork. Alternatively, you can manually whitelist keyart by editing advancedsettings.xml."
-msgstr ""
-
-#/16x9/Content_Settings.xml
 msgctxt "#31425"
 msgid "Enable background slideshows"
 msgstr ""
@@ -745,11 +734,15 @@ msgid "Slideshow speed (seconds)"
 msgstr ""
 
 #/16x9/Content_Settings.xml
-msgctxt "#31491"
-msgid "Adjust the slider to change how long each fanart is displayed in the background slideshow."
+msgctxt "#31426"
+msgid "Prefer keyart for poster views"
 msgstr ""
 
-
+#: NEW
+#/16x9/Content_Settings.xml
+msgctxt "#31489"
+msgid "Keyart is a custom art type. To ensure it is fetched locally or remotely by scrapers, make sure 'keyart' is included in your art type whitelists for movies and / or tv shows. You can do this by choosing 'Recommended Kodi Settings' at the top of this menu, or by navigating to Settings > Media > Videos > Artwork."
+msgstr ""
 
 #/16x9/Content_Settings.xml
 msgctxt "#31406"
@@ -769,7 +762,12 @@ msgstr ""
 #: NEW
 #/16x9/Content_Settings.xml
 msgctxt "#31472"
-msgid "Backgrounds"
+msgid "Set a global override for all default home menu shortcut slideshows or any backgrounds you configured for individual shortcuts in 'Home menu' settings under General > Menus. Choose from the preselected or custom global overrides below."
+msgstr ""
+
+#/16x9/Content_Settings.xml
+msgctxt "#31478"
+msgid ""
 msgstr ""
 
 #/16x9/Content_Settings.xml
